# obj-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: README.md  notes.md
include/: lexer.hpp  object.hpp  parser.hpp
include/obj-cpp/: core.hpp  lexer.hpp  mtl_parser.hpp  obj.hpp  obj_parser.hpp  parser.hpp  reader.hpp
src/: core.cpp  lexer.cpp  mtl_parser.cpp  obj_parser.cpp  obj_viewer.cpp  object.cpp  parser.cpp  viewer.cpp
test/: CMakeLists.txt  fuzzy_tests.cpp  lexer_tests.cpp  mtl_parser_tests.cpp  obj_parser_tests.cpp  parser_tests.cpp  reader_tests.cpp
